# RecommendationCryptoSystem

./: .gitignore  AbstractLSH_CLUSTER.cpp  AbstractLSH_CLUSTER.h  AbstractLSH_CUBE.cpp  AbstractLSH_CUBE.h  Assignment.cpp  Assignment.h  AssistantFunctions.cpp  AssistantFunctions.h  CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterAPI.cpp  ClusterAPI.h  ClusteringProxSearching.cpp  ClusteringProxSearching.h  CosineSimilarityCube.cpp  CosineSimilarityCube.h  CosineSimilarityLSH.cpp  CosineSimilarityLSH.h  Cross_Validation.cpp  Cross_Validation.h  CubeAbstract.h  CubeFunctions.cpp  CubeFunctions.h  EuclideanSpaceCube.cpp  EuclideanSpaceCube.h  EuclideanSpaceLSH.cpp  EuclideanSpaceLSH.h  EvaluationMetric.cpp  EvaluationMetric.h  HashTablesStructures.cpp  HashTablesStructures.h  HyperCube.cpp  HyperCube.h  Initialization.cpp  Initialization.h  LSH.cpp  LSH.h  LshSimple.h  (+30 more)
configs/: cluster1.conf  cluster2.conf  cluster3.conf  lsh1.conf  lsh2.conf
demos/demo1/: Out1.txt  Out2.txt  Out3.txt  OutputProject3
demos/demo2/: OutputProject3
demos/demo3/: Out1.txt  Out2.txt  Out3.txt  OutputProject3
executable/: recommendation
inputs/: .~lock.tweets_dataset_small.csv#
